target/generated-sources/antlr4/caffeinatedParser.cpp

#include "wci/intermediate/TypeSpec.h"
using namespace wci::intermediate;


// Generated from caffeinated.g4 by ANTLR 4.7.2


#include "caffeinatedListener.h"
#include "caffeinatedVisitor.h"

#include "caffeinatedParser.h"


using namespace antlrcpp;
using namespace antlr4;

caffeinatedParser::caffeinatedParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

caffeinatedParser::~caffeinatedParser() {
  delete _interpreter;
}

std::string caffeinatedParser::getGrammarFileName() const {
  return "caffeinated.g4";
}

const std::vector<std::string>& caffeinatedParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& caffeinatedParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

caffeinatedParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::HeaderContext* caffeinatedParser::ProgramContext::header() {
  return getRuleContext<caffeinatedParser::HeaderContext>(0);
}

caffeinatedParser::MainBlockContext* caffeinatedParser::ProgramContext::mainBlock() {
  return getRuleContext<caffeinatedParser::MainBlockContext>(0);
}


size_t caffeinatedParser::ProgramContext::getRuleIndex() const {
  return caffeinatedParser::RuleProgram;
}

void caffeinatedParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void caffeinatedParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any caffeinatedParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::ProgramContext* caffeinatedParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, caffeinatedParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    header();
    setState(45);
    mainBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

caffeinatedParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::HeaderContext::PROGRAM() {
  return getToken(caffeinatedParser::PROGRAM, 0);
}

tree::TerminalNode* caffeinatedParser::HeaderContext::ID() {
  return getToken(caffeinatedParser::ID, 0);
}


size_t caffeinatedParser::HeaderContext::getRuleIndex() const {
  return caffeinatedParser::RuleHeader;
}

void caffeinatedParser::HeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHeader(this);
}

void caffeinatedParser::HeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHeader(this);
}


antlrcpp::Any caffeinatedParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::HeaderContext* caffeinatedParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, caffeinatedParser::RuleHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(caffeinatedParser::PROGRAM);
    setState(48);
    match(caffeinatedParser::ID);
    setState(49);
    match(caffeinatedParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainBlockContext ------------------------------------------------------------------

caffeinatedParser::MainBlockContext::MainBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::DeclarationsContext* caffeinatedParser::MainBlockContext::declarations() {
  return getRuleContext<caffeinatedParser::DeclarationsContext>(0);
}

caffeinatedParser::CompoundStmtContext* caffeinatedParser::MainBlockContext::compoundStmt() {
  return getRuleContext<caffeinatedParser::CompoundStmtContext>(0);
}


size_t caffeinatedParser::MainBlockContext::getRuleIndex() const {
  return caffeinatedParser::RuleMainBlock;
}

void caffeinatedParser::MainBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainBlock(this);
}

void caffeinatedParser::MainBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainBlock(this);
}


antlrcpp::Any caffeinatedParser::MainBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitMainBlock(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::MainBlockContext* caffeinatedParser::mainBlock() {
  MainBlockContext *_localctx = _tracker.createInstance<MainBlockContext>(_ctx, getState());
  enterRule(_localctx, 4, caffeinatedParser::RuleMainBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    declarations();
    setState(52);
    compoundStmt();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

caffeinatedParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::DeclarationsContext::VAR() {
  return getToken(caffeinatedParser::VAR, 0);
}

caffeinatedParser::DeclListContext* caffeinatedParser::DeclarationsContext::declList() {
  return getRuleContext<caffeinatedParser::DeclListContext>(0);
}


size_t caffeinatedParser::DeclarationsContext::getRuleIndex() const {
  return caffeinatedParser::RuleDeclarations;
}

void caffeinatedParser::DeclarationsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarations(this);
}

void caffeinatedParser::DeclarationsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarations(this);
}


antlrcpp::Any caffeinatedParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::DeclarationsContext* caffeinatedParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 6, caffeinatedParser::RuleDeclarations);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(caffeinatedParser::VAR);
    setState(55);
    match(caffeinatedParser::T__1);
    setState(56);
    declList();
    setState(57);
    match(caffeinatedParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclListContext ------------------------------------------------------------------

caffeinatedParser::DeclListContext::DeclListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<caffeinatedParser::DeclContext *> caffeinatedParser::DeclListContext::decl() {
  return getRuleContexts<caffeinatedParser::DeclContext>();
}

caffeinatedParser::DeclContext* caffeinatedParser::DeclListContext::decl(size_t i) {
  return getRuleContext<caffeinatedParser::DeclContext>(i);
}


size_t caffeinatedParser::DeclListContext::getRuleIndex() const {
  return caffeinatedParser::RuleDeclList;
}

void caffeinatedParser::DeclListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclList(this);
}

void caffeinatedParser::DeclListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclList(this);
}


antlrcpp::Any caffeinatedParser::DeclListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitDeclList(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::DeclListContext* caffeinatedParser::declList() {
  DeclListContext *_localctx = _tracker.createInstance<DeclListContext>(_ctx, getState());
  enterRule(_localctx, 8, caffeinatedParser::RuleDeclList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(59);
    decl();
    setState(64);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(60);
        match(caffeinatedParser::T__0);
        setState(61);
        decl(); 
      }
      setState(66);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

caffeinatedParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::VarListContext* caffeinatedParser::DeclContext::varList() {
  return getRuleContext<caffeinatedParser::VarListContext>(0);
}

caffeinatedParser::TypeIdContext* caffeinatedParser::DeclContext::typeId() {
  return getRuleContext<caffeinatedParser::TypeIdContext>(0);
}


size_t caffeinatedParser::DeclContext::getRuleIndex() const {
  return caffeinatedParser::RuleDecl;
}

void caffeinatedParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void caffeinatedParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


antlrcpp::Any caffeinatedParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::DeclContext* caffeinatedParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 10, caffeinatedParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    varList();
    setState(68);
    match(caffeinatedParser::T__1);
    setState(69);
    typeId();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarListContext ------------------------------------------------------------------

caffeinatedParser::VarListContext::VarListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<caffeinatedParser::VarIdContext *> caffeinatedParser::VarListContext::varId() {
  return getRuleContexts<caffeinatedParser::VarIdContext>();
}

caffeinatedParser::VarIdContext* caffeinatedParser::VarListContext::varId(size_t i) {
  return getRuleContext<caffeinatedParser::VarIdContext>(i);
}


size_t caffeinatedParser::VarListContext::getRuleIndex() const {
  return caffeinatedParser::RuleVarList;
}

void caffeinatedParser::VarListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarList(this);
}

void caffeinatedParser::VarListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarList(this);
}


antlrcpp::Any caffeinatedParser::VarListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitVarList(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::VarListContext* caffeinatedParser::varList() {
  VarListContext *_localctx = _tracker.createInstance<VarListContext>(_ctx, getState());
  enterRule(_localctx, 12, caffeinatedParser::RuleVarList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    varId();
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == caffeinatedParser::T__2) {
      setState(72);
      match(caffeinatedParser::T__2);
      setState(73);
      varId();
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarIdContext ------------------------------------------------------------------

caffeinatedParser::VarIdContext::VarIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::VarIdContext::ID() {
  return getToken(caffeinatedParser::ID, 0);
}


size_t caffeinatedParser::VarIdContext::getRuleIndex() const {
  return caffeinatedParser::RuleVarId;
}

void caffeinatedParser::VarIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarId(this);
}

void caffeinatedParser::VarIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarId(this);
}


antlrcpp::Any caffeinatedParser::VarIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitVarId(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::VarIdContext* caffeinatedParser::varId() {
  VarIdContext *_localctx = _tracker.createInstance<VarIdContext>(_ctx, getState());
  enterRule(_localctx, 14, caffeinatedParser::RuleVarId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(caffeinatedParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdContext ------------------------------------------------------------------

caffeinatedParser::TypeIdContext::TypeIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::TypeIdContext::Type_ID() {
  return getToken(caffeinatedParser::Type_ID, 0);
}


size_t caffeinatedParser::TypeIdContext::getRuleIndex() const {
  return caffeinatedParser::RuleTypeId;
}

void caffeinatedParser::TypeIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeId(this);
}

void caffeinatedParser::TypeIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeId(this);
}


antlrcpp::Any caffeinatedParser::TypeIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitTypeId(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::TypeIdContext* caffeinatedParser::typeId() {
  TypeIdContext *_localctx = _tracker.createInstance<TypeIdContext>(_ctx, getState());
  enterRule(_localctx, 16, caffeinatedParser::RuleTypeId);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(caffeinatedParser::Type_ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompoundStmtContext ------------------------------------------------------------------

caffeinatedParser::CompoundStmtContext::CompoundStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::CompoundStmtContext::ORDER() {
  return getToken(caffeinatedParser::ORDER, 0);
}

caffeinatedParser::StmtListContext* caffeinatedParser::CompoundStmtContext::stmtList() {
  return getRuleContext<caffeinatedParser::StmtListContext>(0);
}

tree::TerminalNode* caffeinatedParser::CompoundStmtContext::PICKUP() {
  return getToken(caffeinatedParser::PICKUP, 0);
}


size_t caffeinatedParser::CompoundStmtContext::getRuleIndex() const {
  return caffeinatedParser::RuleCompoundStmt;
}

void caffeinatedParser::CompoundStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompoundStmt(this);
}

void caffeinatedParser::CompoundStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompoundStmt(this);
}


antlrcpp::Any caffeinatedParser::CompoundStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitCompoundStmt(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::CompoundStmtContext* caffeinatedParser::compoundStmt() {
  CompoundStmtContext *_localctx = _tracker.createInstance<CompoundStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, caffeinatedParser::RuleCompoundStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(caffeinatedParser::ORDER);
    setState(84);
    stmtList();
    setState(85);
    match(caffeinatedParser::PICKUP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

caffeinatedParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::CompoundStmtContext* caffeinatedParser::StmtContext::compoundStmt() {
  return getRuleContext<caffeinatedParser::CompoundStmtContext>(0);
}

caffeinatedParser::AssignmentStmtContext* caffeinatedParser::StmtContext::assignmentStmt() {
  return getRuleContext<caffeinatedParser::AssignmentStmtContext>(0);
}

caffeinatedParser::If_statementContext* caffeinatedParser::StmtContext::if_statement() {
  return getRuleContext<caffeinatedParser::If_statementContext>(0);
}

caffeinatedParser::While_loopContext* caffeinatedParser::StmtContext::while_loop() {
  return getRuleContext<caffeinatedParser::While_loopContext>(0);
}


size_t caffeinatedParser::StmtContext::getRuleIndex() const {
  return caffeinatedParser::RuleStmt;
}

void caffeinatedParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void caffeinatedParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any caffeinatedParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::StmtContext* caffeinatedParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 20, caffeinatedParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case caffeinatedParser::ORDER: {
        enterOuterAlt(_localctx, 1);
        setState(87);
        compoundStmt();
        break;
      }

      case caffeinatedParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(88);
        assignmentStmt();
        break;
      }

      case caffeinatedParser::IF: {
        enterOuterAlt(_localctx, 3);
        setState(89);
        if_statement();
        break;
      }

      case caffeinatedParser::WHILE: {
        enterOuterAlt(_localctx, 4);
        setState(90);
        while_loop();
        break;
      }

      case caffeinatedParser::T__0:
      case caffeinatedParser::PICKUP:
      case caffeinatedParser::COMPLETE: {
        enterOuterAlt(_localctx, 5);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtListContext ------------------------------------------------------------------

caffeinatedParser::StmtListContext::StmtListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<caffeinatedParser::StmtContext *> caffeinatedParser::StmtListContext::stmt() {
  return getRuleContexts<caffeinatedParser::StmtContext>();
}

caffeinatedParser::StmtContext* caffeinatedParser::StmtListContext::stmt(size_t i) {
  return getRuleContext<caffeinatedParser::StmtContext>(i);
}


size_t caffeinatedParser::StmtListContext::getRuleIndex() const {
  return caffeinatedParser::RuleStmtList;
}

void caffeinatedParser::StmtListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtList(this);
}

void caffeinatedParser::StmtListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtList(this);
}


antlrcpp::Any caffeinatedParser::StmtListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitStmtList(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::StmtListContext* caffeinatedParser::stmtList() {
  StmtListContext *_localctx = _tracker.createInstance<StmtListContext>(_ctx, getState());
  enterRule(_localctx, 22, caffeinatedParser::RuleStmtList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    stmt();
    setState(99);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == caffeinatedParser::T__0) {
      setState(95);
      match(caffeinatedParser::T__0);
      setState(96);
      stmt();
      setState(101);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentStmtContext ------------------------------------------------------------------

caffeinatedParser::AssignmentStmtContext::AssignmentStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

caffeinatedParser::VariableContext* caffeinatedParser::AssignmentStmtContext::variable() {
  return getRuleContext<caffeinatedParser::VariableContext>(0);
}

caffeinatedParser::ExprContext* caffeinatedParser::AssignmentStmtContext::expr() {
  return getRuleContext<caffeinatedParser::ExprContext>(0);
}


size_t caffeinatedParser::AssignmentStmtContext::getRuleIndex() const {
  return caffeinatedParser::RuleAssignmentStmt;
}

void caffeinatedParser::AssignmentStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentStmt(this);
}

void caffeinatedParser::AssignmentStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentStmt(this);
}


antlrcpp::Any caffeinatedParser::AssignmentStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitAssignmentStmt(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::AssignmentStmtContext* caffeinatedParser::assignmentStmt() {
  AssignmentStmtContext *_localctx = _tracker.createInstance<AssignmentStmtContext>(_ctx, getState());
  enterRule(_localctx, 24, caffeinatedParser::RuleAssignmentStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    variable();
    setState(103);
    match(caffeinatedParser::T__3);
    setState(104);
    expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

caffeinatedParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* caffeinatedParser::VariableContext::ID() {
  return getToken(caffeinatedParser::ID, 0);
}


size_t caffeinatedParser::VariableContext::getRuleIndex() const {
  return caffeinatedParser::RuleVariable;
}

void caffeinatedParser::VariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable(this);
}

void caffeinatedParser::VariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<caffeinatedListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable(this);
}


antlrcpp::Any caffeinatedParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<caffeinatedVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

caffeinatedParser::VariableContext* caffeinatedParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 26, caffeinatedParser::RuleVariable);
